# python_patterns_edu

./: .gitignore  .pre-commit-config.yaml  Queries.sql  README.md  alembic.ini  pyproject.toml  ruff.toml
infra/: .dockerignore  Dockerfile  requirements.txt
infra/compose/: compose.yaml
infra/compose/config/: pg_hba.conf  postgresql.conf
local_dev_infra/compose/: compose.yaml
migrations/: env.py
migrations/versions/: 4837ce3bc6b4_initial_schema_with_product_aggregate.py  80cbc4ac4346_added_field_version_to_product.py
src/: __init__.py  model.py  orm.py  repository.py
src/allocation/: config.py
src/allocation/adapters/: email.py  orm.py  repository.py
src/allocation/domain/: commands.py  events.py  exceptions.py  model.py
src/allocation/entrypoints/: main.py  schemas.py
src/allocation/interfaces/: main.py
src/allocation/service_layer/: handlers.py  messagebus.py  services.py  unit_of_work.py
tests/: conftest.py  test_batches.py  utils.py
tests/e2e/: test_api.py
tests/integration/: test_orm.py  test_repository.py  test_uow.py
tests/unit/: test_batches.py  test_handlers.py  test_orm.py  test_product.py  test_repository.py  test_services.py
