[project]
name = "python-patterns-edu"
version = "0.1.0"
description = "Education project for design patterns"
authors = [
    {name = "leprekorn",email = "leprekorn@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "sqlalchemy (>=2.0.45,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.tests]
optional = true

[tool.poetry.group.tests.dependencies]
pytest = "^9.0.2"
pytest-instafail = "^0.5.0"

[tool.poetry.group.linters]
optional = true

[tool.poetry.group.linters.dependencies]
mypy = "^1.19.1"
ruff = "^0.14.10"
pre-commit = "^4.5.1"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: unit tests (fast, mocked)",
    "orm: unit tests for orm",
    "integration: integration tests (real services)",
    "smoke: smoke/end-to-end checks after deploy, read-only checks against deployed environment; supply credentials via CI/Ansible environment variables",
    "e2e: smoke test that run on prod in read-only mode (select from database, etc)",
]

addopts = [
    "-v",
    "--showlocals",
    "--instafail",
]
