[tool.poetry]
name = "allocation"
version = "0.1.0"
description = "Education project for design patterns"
authors = ["leprekorn <leprekorn@yandex.ru>"]
readme = "README.md"
packages = [
    { include = "allocation", from = "src" }
]

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.poetry.dependencies]
python = ">=3.14"
sqlalchemy = ">=2.0.45,<3.0.0"
fastapi = ">=0.128.0,<0.129.0"
pydantic = "^2.12.5"
uvicorn = "^0.40.0"
psycopg2-binary = "^2.9.11"
python-dotenv = "^1.2.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.tests]
optional = true

[tool.poetry.group.tests.dependencies]
pytest = "^9.0.2"
pytest-instafail = "^0.5.0"
pytest-cov = "^7.0.0"
requests = "^2.32.5"
types-requests = "^2.32.4.20260107"
httpx = "^0.28.1"

[tool.poetry.group.linters]
optional = true

[tool.poetry.group.linters.dependencies]
mypy = "^1.19.1"
ruff = "^0.14.10"
pre-commit = "^4.5.1"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: unit tests (fast, mocked)",
    "orm: unit tests for orm",
    "repository: unit tests for repository pattern",
    "integration: integration tests (real services)",
    "smoke: smoke/end-to-end checks after deploy, read-only checks against deployed environment; supply credentials via CI/Ansible environment variables",
    "e2e: test that run on on e2e mode, using database and API endpoints",
    "api: test REST API endpoints",
    "service: test for service layer",
]

addopts = [
    "-v",
    "--showlocals",
    "--instafail",
    "--cov",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=80"
]


[tool.coverage.run]
branch = true
source = ["src"]
omit = [
    "src/**/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]
precision = 2
show_missing = true

[tool.coverage.json]
output = "cov/coverage.json"

[tool.coverage.html]
directory = "cov/html"
